# automaton-auditor

./: .env.example  .gitignore  README.md  pyproject.toml  test_setup.py
Audit_Report/report_onpeer_generated/: audit_report.md
Audit_Report/report_onself_generated/: audit_report.md
audit_reports/report_bypeer_received/: audit_report.md
src/: graph.py  state.py
src/nodes/: detectives.py  judges.py  justice.py
src/tools/: doc_tools.py  repo_tools.py
