[project]
name = "automaton-auditor"
version = "0.1.0"
description = "Week 2: Automated Code Auditor Swarm built with LangGraph and Claude"
requires-python = ">=3.11"

dependencies = [
    "anthropic>=0.40.0",
    "langchain-anthropic>=0.3.0",
    "langchain-core>=0.3.0",
    "langgraph>=0.2.0",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.0",
    "pymupdf>=1.24.0",
    "pdfplumber>=0.11.0",
    "typing-extensions>=4.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.5.0",
]
langsmith = [
    "langsmith>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.hatch.build.targets.wheel]
packages = ["src"]
